--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-sensitive-info": "^5.5.8",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5",
