--- a/app.json
+++ b/app.json
@@ -29,5 +29,12 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    ,
+    "plugin":[
+      [   "expo-image-picker",
+      {
+        "photosPermission": "The app accesses your photos to let you share them with your friends."
+      }]
+    ]
   }
 }
