--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -23,6 +24,7 @@
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
+    "prettier": "^2.8.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -43,6 +45,9 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "react-app-rewired": "^2.2.1"
   },
   "private": true
