--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -51,8 +51,7 @@
     "customize-cra": "^1.0.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "react-app-rewired": "^2.2.1"
+    "eslint-plugin-prettier": "^4.2.1"
   },
   "private": true
 }
