--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-image-picker": "^14.1.1",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "prettier": "^2.8.7",
     "react": "18.1.0",
@@ -34,6 +35,7 @@
     "react-native-fb-image-grid": "^0.0.5",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-mention-hashtag-text": "^1.0.3",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^3.3.2",
